fix: side popup and products forms inputs not responsive

--- a/src/app/shared/components/side-popup/side-popup.component.scss
+++ b/src/app/shared/components/side-popup/side-popup.component.scss
@@ -2,7 +2,8 @@
 
 .popup {
   display: none;
-  width: 330px;
+  min-width: 330px;
+  max-width: calc(100% - 12%);
   height: auto;
   min-height: 100vh;
   max-height: 100%;
